test/bad/other.java

public class one extends Vehicle{
	;
}

public class two extends Vehicle{
	;
}

public class three extends Vehicle{
	;
}

public class four extends Vehicle{
	;
}
